attempt #4 to fix overflow issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,6 @@ body {
   justify-content: center;
   flex-direction: column;
   padding: var(--section-spacing);
-  min-height: 100vh;
   overflow-x: hidden;
 }
 
